[package]
name = "screeps_colony"
version = "0.1.0"
edition = "2021"
description = "Screeps AI"
license = "none"
repository = "https://github.com/martindevans/ScreepsColony"

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 8

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--strip-debug", "--vacuum", "--dce", "--strip-dwarf"]

[dependencies]
wasm-bindgen = "0.2.82"
screeps-game-api = { version = "0.10.0", git = "https://github.com/rustyscreeps/screeps-game-api/", branch = "bindgen" }
web-sys = { version = "0.3.59", features = ["console"] }
